--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@formatjs/intl-localematcher": "^0.6.1",
-    "@lens-chain/sdk": "^0.0.0-canary-20250304124140",
-    "@lens-chain/storage-client": "^0.0.0-next-20250303153545",
-    "@lens-protocol/client": "^0.0.0-canary-20250319110601",
+    "@lens-chain/sdk": "^0.0.0-canary-20250401091809",
+    "@lens-protocol/client": "^0.0.0-canary-20250403160407",
+    "@lens-protocol/metadata": "^2.0.0-next.7",
     "@tanstack/react-query": "^5.69.0",
     "@xmtp/content-type-reaction": "^2.0.1",
     "@xmtp/content-type-reply": "^2.0.1",
