--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@formatjs/intl-localematcher": "^0.6.1",
-    "@lens-chain/sdk": "^0.0.0-canary-20250401091809",
-    "@lens-protocol/client": "^0.0.0-canary-20250403160407",
+    "@lens-chain/sdk": "^1.0.3",
+    "@lens-protocol/client": "^0.0.0-canary-20250414075151",
     "@lens-protocol/metadata": "^2.0.0-next.7",
     "@tanstack/react-query": "^5.69.0",
     "@xmtp/content-type-reaction": "^2.0.1",
