--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "@formatjs/intl-localematcher": "^0.6.1",
     "@lens-chain/sdk": "^1.0.3",
     "@lens-protocol/client": "^0.0.0-canary-20250414075151",
