--- a/package.json
+++ b/package.json
@@ -15,14 +15,10 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@formatjs/intl-localematcher": "^0.6.1",
     "@lens-chain/sdk": "^1.0.3",
-    "@lens-protocol/client": "^0.0.0-canary-20250414075151",
+    "@lens-protocol/client": "^0.0.0-canary-20250409200234",
     "@lens-protocol/metadata": "^2.0.0-next.7",
     "@tanstack/react-query": "^5.69.0",
-    "@xmtp/content-type-reaction": "^2.0.1",
-    "@xmtp/content-type-reply": "^2.0.1",
-    "@xmtp/react-sdk": "^9.0.0",
-    "@xmtp/user-preferences-bindings-wasm": "^0.3.6",
-    "@xmtp/xmtp-js": "^13.0.4",
+    "@xmtp/browser-sdk": "^2.0.6",
     "connectkit": "^1.8.2",
     "critters": "^0.0.23",
     "ethers": "^6.13.5",
