--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "graphql": "^16.10.0",
     "masonic": "^4.0.1",
     "negotiator": "^1.0.0",
-    "next": "15.2.3",
+    "next": "^15.3.6",
     "numeral": "^2.0.6",
     "pino-pretty": "^13.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "viem": "^2.23.14",
@@ -45,7 +45,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.3",
+    "eslint-config-next": "^15.3.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
