--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "graphql": "^16.10.0",
     "masonic": "^4.0.1",
     "negotiator": "^1.0.0",
-    "next": "^15.3.6",
+    "next": "15.3.6",
     "numeral": "^2.0.6",
     "pino-pretty": "^13.0.0",
     "react": "^19.2.1",
@@ -42,10 +42,10 @@
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/numeral": "^2.0.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.1",
+    "@types/react-dom": "^19.2.1",
     "eslint": "^9",
-    "eslint-config-next": "^15.3.6",
+    "eslint-config-next": "15.3.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
